fix: fix division by zero in carousel column-gap (fix #15)

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -45,8 +45,11 @@ $icon-button-padding: 8px;
         justify-content: center;
         align-items: stretch;
         width: calc(100% + (var(--yarl__carousel_slides_count, 0) - 1) * (100% + var(--yarl__carousel_spacing_px, 0) * 1px + var(--yarl__carousel_spacing_percent, 0) * 1%));
-        column-gap: calc(var(--yarl__carousel_spacing_px, 0) * 1px + 100 / (100 * var(--yarl__carousel_slides_count, 0) + (var(--yarl__carousel_slides_count, 0) - 1) * var(--yarl__carousel_spacing_percent, 0)) * var(--yarl__carousel_spacing_percent, 0) * 1%);
         transform: translateX(var(--yarl__swipe_offset, 0px));
+
+        &_with_slides {
+            column-gap: calc(var(--yarl__carousel_spacing_px, 0) * 1px + 100 / (100 * var(--yarl__carousel_slides_count, 0) + (var(--yarl__carousel_slides_count, 0) - 1) * var(--yarl__carousel_spacing_percent, 0)) * var(--yarl__carousel_spacing_percent, 0) * 1%);
+        }
     }
 
     &_flex_center {
